Dockerfile, Jenkinsfile, pom.xml created and configured.